data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2178.wast
;; 8. **Test 8**: Implement a loop with `br_table` where the label vector has duplicate indices. Verify that the branching to duplicate labels maintains the stack integrity.    - **Constraint**: Ensures label indices in the vector are handled consistently.    - **Relation to Infinite Loops**: Inconsistent handling of duplicates can cause loops to not terminate.

(assert_invalid
  (module (func $loop-with-duplicates
    (block (loop $L (loop $L1
      (br_table 0 0 0 2 (i32.const 0))
    )))
  ))
  "unknown label"
)